# gpuikit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  log.jsonl  todo.md
.github/workflows/: release-deploy.yml  release.yml
crates/assets/src/: icons.rs  lib.rs
crates/gpui-kit/: Cargo.toml
crates/gpui-kit/examples/: hello_world.rs
crates/gpui-kit/src/: lib.rs
crates/gpui_input/: Cargo.toml
crates/gpui_input/src/: input_handler.rs  lib.rs  numeric_input.rs  text_input.rs
crates/gpui_kit/: Cargo.toml
crates/gpui_kit/examples/: hello_world.rs  input.rs
crates/gpuikit/: Cargo.toml
crates/gpuikit-assets/: Cargo.toml
crates/gpuikit-assets/src/: lib.rs
crates/gpuikit-editor/: .gitignore  Cargo.toml  KEYMAP.md  README.md  TODO.md  scrolling-todo.md
crates/gpuikit-editor/examples/: demo-keymap.json  editor_demo.rs  keymap_usage.rs
crates/gpuikit-editor/src/: buffer.rs  editor.rs  element.rs  keymap.rs  lib.rs  meta_line.rs  syntax_highlighter.rs  tests.rs
crates/gpuikit-editor/src/tests/: editor.rs  emoji.rs  testing_todo.md
crates/gpuikit-editor/tests/: editor_tests.rs  integration_test.rs  keymap_test.rs
crates/gpuikit-keymap/: Cargo.toml  default-keymap.json  test-keymap.json
crates/gpuikit-keymap/src/: extensions.rs  lib.rs
crates/gpuikit-markdown/: Cargo.toml
crates/gpuikit-markdown/src/: markdown.rs  parser.rs  style.rs
crates/gpuikit-markdown/src/elements/: code_block.rs  divider.rs  heading.rs  image.rs  link.rs  list.rs  paragraph.rs  quote.rs
crates/gpuikit-media/: Cargo.toml
crates/gpuikit-media/src/: audio.rs  ffmpeg.rs  frame.rs  media.rs  player.rs  source.rs  view.rs
crates/gpuikit-theme/: Cargo.toml
crates/gpuikit-theme/src/: colors.rs  lib.rs  styles.rs
crates/gpuikit-utils/: Cargo.toml
crates/gpuikit-utils/src/: lib.rs
crates/gpuikit/src/: elements.rs  error.rs  icons.rs  layout.rs  lib.rs  resource.rs  traits.rs
crates/gpuikit/src/editor/: buffer.rs  meta_line.rs  syntax_highlighter.rs
crates/gpuikit/src/editor/tests/: emoji.rs
crates/gpuikit/src/elements/: avatar.rs  button.rs  dropdown.rs  icon_button.rs  separator.rs  slider.rs  toggle.rs  video.rs
crates/gpuikit/src/keymap/: mod.rs
crates/gpuikit/src/markdown/: elements.rs  mod.rs
crates/gpuikit/src/markdown/elements/: heading.rs  quote.rs
crates/gpuikit/src/traits/: button.rs
crates/showcase/: Cargo.toml
crates/showcase/src/: showcase.rs  video_player.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  keyboard.rs  lib.rs
docs/: _index.md  gpuikit_fs.md
examples/: dialog_example.rs  file_dialog.rs  input_sandbox.rs  popover_demo.rs  showcase.rs  tasks.rs  toast_example.rs
examples/components/: sandbox.rs
examples/input/: fixtures.rs  sandbox.rs
src/: elements.rs  fs.rs  input.rs  lib.rs  traits.rs  utils.rs
src/editor/: editor.rs  element.rs  mod.rs
src/editor/tests/: editor.rs
src/elements/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  card.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown.rs  empty.rs  field.rs  grain.rs  icon_button.rs  input.rs  input_group.rs  kbd.rs  label.rs  list.rs  loading_indicator.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  skeleton.rs  slider.rs  switch.rs  tabs.rs  textarea.rs  toast.rs  toggle.rs  toggle_group.rs  tooltip.rs  typography.rs
src/input/: bindings.rs  blink.rs  handler.rs  state.rs
src/markdown/: inline_style.rs  parser.rs
src/markdown/elements/: code_block.rs  divider.rs  link.rs  list.rs  paragraph.rs
src/theme/: mod.rs
src/traits/: clickable.rs  disableable.rs  labelable.rs  orientable.rs  portal.rs  selectable.rs  visual_focus.rs
src/utils/: element_manager.rs
