[workspace]
resolver = "2"
members = [
    "crates/gpuikit",
    "crates/gpuikit-assets",
    "crates/gpuikit-theme",
    "crates/gpuikit-utils",
    "crates/gpuikit-keymap",
    "crates/gpuikit-editor",
]

default-members = ["crates/gpuikit"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nate Butler <iamnbutler@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamnbutler/gpuikit"
homepage = "https://github.com/iamnbutler/gpuikit"
rust-version = "1.75"

[workspace.dependencies]
# workspace crates
gpuikit = { path = "crates/gpuikit", version = "0.1.0" }
gpuikit-assets = { path = "crates/gpuikit-assets", version = "0.1.0" }
gpuikit-theme = { path = "crates/gpuikit-theme", version = "0.1.0" }
gpuikit-utils = { path = "crates/gpuikit-utils", version = "0.1.0" }
gpuikit-keymap = { path = "crates/gpuikit-keymap", version = "0.1.0" }
gpuikit-editor = { path = "crates/gpuikit-editor", version = "0.1.0" }

# gpui
gpui = "0.2.2"
gpui_util = { version = "0.2.2" }

# common deps
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# todo: move to assets
rust-embed = "8.2.0"

# todo: move to editor
syntect = "5.3.0"

# lints
[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"

# optimize release builds
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# speed up debug builds
[profile.dev]
opt-level = 0
debug = 2
