[package]
name = "gpuikit-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Asset management for GPUI applications"
readme = "README.md"
keywords = ["gpui", "assets", "embed", "resources", "icons"]
categories = ["gui", "multimedia"]

[lib]
name = "gpuikit_assets"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { workspace = true }

# Embedding assets in binary
rust-embed = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
