[package]
name = "gpui-editor"
version = "0.1.0"
authors = ["Nate Butler <iamnbutler@gmail.com>"]
description = "A standalone editor component for GPUI"
edition = "2021"
keywords = ["gpui", "editor", "text-editor", "syntax-highlighting"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamnbutler/gpui-editor/"

[lib]
name = "gpui_editor"
path = "src/lib.rs"

[[example]]
name = "editor_demo"
path = "examples/editor_demo.rs"



[dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
gpui_util = { version = "0.2.2" }
gpuikit-keymap = { workspace = true }
syntect = "5.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
