[package]
name = "gpuikit-keymap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "gpuikit_keymap"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = []
schema = ["schemars"]

[dependencies.schemars]
version = "0.8"
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
