[package]
name = "gpuikit-theme"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Flexible theming system for GPUI applications with built-in themes"
readme = "README.md"
keywords = ["gpui", "theme", "theming", "colors", "styles"]
categories = ["gui", "graphics"]

[lib]
name = "gpuikit_theme"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { workspace = true }

# Serialization for theme files
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Color manipulation
palette = "0.7"
csscolorparser = "0.6"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["builtin-themes"]
# Include built-in themes
builtin-themes = []
# Enable custom theme loading from JSON/YAML
custom-themes = []
# Enable theme hot-reloading for development
hot-reload = ["notify"]

# Optional dependencies
[dependencies.notify]
version = "6.1"
optional = true

# Package metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_theme"
path = "examples/basic_theme.rs"

[[example]]
name = "theme_switcher"
path = "examples/theme_switcher.rs"

[[example]]
name = "custom_theme"
path = "examples/custom_theme.rs"

[[example]]
name = "color_palette"
path = "examples/color_palette.rs"
