[package]
name = "gpuikit-theme"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Simple theme system for GPUI applications"
readme = "README.md"
keywords = ["gpui", "theme", "theming", "colors"]
categories = ["gui", "graphics"]

[lib]
name = "gpuikit_theme"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { workspace = true }

# Logging (optional)
log = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

# Package metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_theme"
path = "examples/basic_theme.rs"

[[example]]
name = "theme_switcher"
path = "examples/theme_switcher.rs"
