[package]
name = "gpuikit-theme"
description = "A theme module for gpuikit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "gpuikit_theme"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { workspace = true }

# Logging (optional)
log = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

# Package metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
