[package]
name = "gpuikit-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Common utilities and helpers for GPUI applications"
readme = "README.md"
keywords = ["gpui", "utils", "utilities", "helpers", "tools"]
categories = ["gui", "development-tools"]

[lib]
name = "gpuikit_utils"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
