[package]
name = "gpuikit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A comprehensive UI component library for GPUI applications"
readme = "../../README.md"
keywords = ["gpui", "ui", "components", "toolkit", "gui"]
categories = ["gui", "graphics"]

[lib]
name = "gpuikit"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { workspace = true }
rust-embed = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

# Markdown parsing
pulldown-cmark = { workspace = true }

# Editor dependencies (optional)
syntect = { version = "5.3.0", optional = true }
gpui_util = { version = "0.2.2", optional = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = []
editor = ["dep:syntect", "dep:gpui_util"]
schema = ["schemars"]

[dependencies.schemars]
version = "0.8"
optional = true

# Package metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
