[package]
name = "gpuikit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A comprehensive UI component library for GPUI applications"
readme = "../../README.md"
keywords = ["gpui", "ui", "components", "toolkit", "gui"]
categories = ["gui", "graphics"]

[lib]
name = "gpuikit"
path = "src/lib.rs"

[dependencies]
# Internal workspace dependencies
gpuikit-theme = { workspace = true }
gpuikit-keymap = { workspace = true }
gpuikit-media = { workspace = true, optional = true }

# GPUI framework
gpui = { workspace = true }
rust-embed = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-video = "0.4"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[features]
default = []
media = ["dep:gpuikit-media"]

# Package metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
