[package]
name = "showcase"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A showcase of the gpuikit components & patterns"

[[bin]]
name = "showcase"
path = "src/showcase.rs"

[dependencies]
# Internal workspace dependencies
gpuikit = { workspace = true }

# GPUI framework
gpui = { workspace = true }
